--- a/website/src/index.css
+++ b/website/src/index.css
@@ -7,3 +7,7 @@
 * {
     font-family: 'Montserrat', Arial, Verdana, sans-serif;
 }
+
+.input {
+    @apply border border-gray-200 rounded h-12 w-full block transition outline-none px-3;
+}
